fix(map): change map legend so that labels dont sometimes overlap

--- a/website_leaflet_map_widget/static/src/css/map.css
+++ b/website_leaflet_map_widget/static/src/css/map.css
@@ -3,8 +3,8 @@
     color: #555;
 }
 .legend i {
-    width: 18px;
-    height: 18px;
+    width: 2rem;
+    height: 1.5rem;
     float: left;
     margin-right: 8px;
     opacity: 0.7;
